# colson-pip

./: README.md  pyproject.toml  test.py  test_in.colson  test_out.colson
colson/: __init__.py  parser.py
