[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colson"
version = "1.0.0"
authors = [{ name = "Artem Shush", email = "shushtain@gmail.com" }]
description = "ColSON parser for Python 3."
keywords = ["colson", "python", "parser"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = []

[project.urls]
Homepage = "https://github.com/shushtain/colson-pip"
Issues = "https://github.com/shushtain/colson-pip/issues"
